# toon-phong

./: CMakeLists.txt  Entity.cpp  Mesh.cpp  Mesh.hpp  Model.hpp  globals.js  helpers.js  index.html  initialize.js  lesson14.html  main.cpp  myscene.js  toon-phong.frag  toon-phong.html  toon-phong.vert  webgl.js
c++/: Entity.hpp  Model.cpp  ModelImporter.cpp
shaders/: outline.frag  outline.vert  toon-phong.frag  toon-phong.vert
webgl/: camera.js  globals.js  helpers.js  index.html  initialize.js  myscene.js  webgl-obj-loader.js  webgl.js
